<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemoteSmsController</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Fake">Fake Call and SMS</string>
    <string name="TimeBlock">Time Based Blocking</string>
    <string name="SMSAction">SMS Based Actions</string>
    <string name="Select">Select Action To Perform</string>
    <string name="title_activity_fake">Fake</string>
    <string name="StartTime">Start Time</string>
    <string name="endtime">End Time</string>
    <string name="Days">Days</string>
    <string name="monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="thruday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="title_activity_smsactions">SMSActions</string>
    <string name="title_activity_time_block">TimeBlock</string>
    <string name="title_activity_fake_sms">FakeSMS</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="ChangePassword">Change Password</string>

</resources>
