
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView"
    android:fillViewport="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    tools:context="com.example.vicky.remotesmscontroller.Fake"
    >


    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/w1"
        android:isScrollContainer="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:scrollbars="vertical"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/StartTime"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timePicker"
            android:layout_toEndOf="@+id/datePicker"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="38dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/endtime"
            android:id="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/timePicker" />

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timePicker2"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Days"
            android:id="@+id/textView4"
            android:layout_below="@+id/timePicker2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:id="@+id/checkBox"
            android:layout_below="@+id/textView4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tuesday"
            android:id="@+id/checkBox2"
            android:layout_below="@+id/checkBox"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wednesday"
            android:id="@+id/checkBox3"
            android:layout_below="@+id/checkBox2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thruday"
            android:id="@+id/checkBox4"
            android:layout_below="@+id/checkBox3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Friday"
            android:id="@+id/checkBox5"
            android:layout_above="@+id/checkBox3"
            android:layout_toRightOf="@+id/checkBox3"
            android:layout_toEndOf="@+id/checkBox3" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:id="@+id/checkBox6"
            android:layout_toEndOf="@+id/checkBox3"
            android:layout_below="@+id/checkBox5"
            android:layout_toRightOf="@+id/checkBox3" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sunday"
            android:id="@+id/checkBox7"
            android:checked="false"
            android:layout_toEndOf="@+id/checkBox3"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/timePicker2"
            android:layout_alignEnd="@+id/timePicker2" />
    </RelativeLayout>
</ScrollView>



